Changed the badge detail so that none is not a link

--- a/badger/templates/badger/includes/badge_full.html
+++ b/badger/templates/badger/includes/badge_full.html
@@ -30,7 +30,11 @@
             <dd class="description">{{ badge.description }}</dd>
     {% endif %}
     <dt>Creator:</dt>
-        <dd><a href="/people/{{ badge.creator}}">{{ badge.creator }}</a></dd>
+        {% if badge.creator %}
+            <dd><a href="/people/{{ badge.creator}}">{{ badge.creator }}</a></dd>
+        {% else %}
+            <dd>{{ badge.creator }}</dd>
+        {% endif %}
     <dt>Created:</dt>
         <dd>{{ badge.created }}</dd>
     <dt>Modified:</dt>
