--- a/badger/templates/badger/includes/badge_full.html
+++ b/badger/templates/badger/includes/badge_full.html
@@ -2,12 +2,19 @@
 
 {% if not award %}
 <ul class="btn-list">
-    {% if badge|permissions_for:request.user|key:'edit_by' %}
+    {% if perms.badger.edit_badge %}
         <li><a class="btn btn-large btn-primary edit_badge" href="{% url badger.views.edit badge.slug  %}">{{ _('Edit badge') }}</a></li>
     {% endif %}
-    {% if badge|permissions_for:request.user|key:'delete_by' %}
+    {% if perms.badger.delete_badge %}
         <li><a class="btn btn-large btn-danger delete_badge" href="{% url badger.views.delete badge.slug %}">{{ _('Delete badge') }}</a></li>
     {% endif %}
+    {% if perms.badger.add_award %}
+        <li><a class="btn btn-large btn-primary award_badge" href="{% url badger.views.award_badge badge.slug %}">{{ _('Award badge') }}</a></li>
+    {% endif %}
+    {% if perms.badger.add_nomination %}
+        <li><a class="btn btn-large btn-danger nominate_badge" href="{% url badger.views.nominate_for badge.slug %}">{{ _('Nominate badge') }}</a></li>
+    {% endif %}
+
 </ul>
 {% endif %}
 
