--- a/badger/templates/badger/badge_detail.html
+++ b/badger/templates/badger/badge_detail.html
@@ -38,7 +38,27 @@
             </li>
         {% endfor %}
     </ul>
+    
 </section>
 {% endif %}
 
+{% if nominations %}
+<section id="recent_nominations"> 
+    <h2>Nominations</h2>
+    <ul class="clearfix nominations">
+        {% for nomination in nominations %}
+            <li class="nomination">
+                <a href="{{ nomination.get_absolute_url }}" class="label">
+                    <span class="badge_title">{{ nomination.badge.title }}</span>
+                    <span class="relation">was nominated for</span>
+                    <span class="user">{{ nomination.nominee }}</span>
+                    <span class="relation">by</span>
+                    <span class="user">{{ nomination.creator }}</span>
+                </a>
+ 
+            </li>
+        {% endfor %}
+    </ul>
+</section>
+{% endif %}
 {% endblock %}
