--- a/badger/templates/badger/home.html
+++ b/badger/templates/badger/home.html
@@ -2,46 +2,33 @@
 
 {% block pageid %}home{% endblock %}
 
-{% block extrahead %}
-    <link rel="alternate" type="application/atom+xml"
-        title="{% trans 'Recently awarded badges' %}"
-        href="{% url badger.feeds.awards_recent 'atom' %}" />
-    <link rel="alternate" type="application/atom+xml"
-        title="{% trans'Recently created badges' %}"
-        href="{% url badger_multiplayer.feeds.badges_recent 'atom' %}" />
-{% endblock %}
-
 {% block content %}
 
-{% if request.user.is_authenticated() %}
-<section id="things_to_do">
-    <h1>Things to Do</h1>
-    <nav><ul>
-        <li><a class="action" href="{% url badger_multiplayer.views.create %}">Create a badge</a></li>
-    </ul></nav>
-</section>
-{% endif %}
-
-<section id="recent_badges" class="clearfix">
-    <h1>Recent badges</h1>
-    <nav><ul>
-        <li>
-            <a href="{% url badger.views.badges_list %}">More...</a>
-            <a href="{% url badger_multiplayer.feeds.badges_recent 'atom' %}"><img src="{{MEDIA_URL}}/img/feed-icon-14x14.png" /></a>
-        </li>
-    </ul></nav>
+<section class="badges_list">
+    <h2>All Badges</h2>
     {% include "badger/includes/badges_list.html" %}
 </section>
 
-<section id="recent_awards" class="clearfix">
-    <h1>Recent awards</h1>
-    <nav><ul>
-        <li>
-            <a href="{% url badger.views.awards_list %}">More...</a>
-            <a href="{% url badger.feeds.awards_recent 'atom' %}"><img src="{{MEDIA_URL}}/img/feed-icon-14x14.png" /></a>
-        </li>
-    </ul></nav>
-    {% include "badger/includes/awards_list.html" %}
+<section id="suggested_badges" class="badges_list">
+    <h2>Suggested Badges</h2>
+    <ul class="badges">
+        {% for badge in progress %}
+
+            <li class="badge">
+                <a href="{{ badge.get_absolute_url }}" class="image">
+                {% if badge.image %}
+                    <img src="{{badge.image.url}}" 
+                {% else %}
+                    <img src="/media/img/default-badge.png"
+                {% endif %}
+            
+                    alt="{{ badge.title }}" width="128" height="128" /></a>
+                <a href="{{ badge.get_absolute_url }}" class="label"><span class="title">{{ badge.title }}</span></a>
+            </li>
+        {% endfor %}
+    </ul>
 </section>
+
+{% include "badger/includes/pagination.html" %}    
 
 {% endblock %}
