Added Home to the sub navigation in badger

--- a/badger/templates/badger/base.html
+++ b/badger/templates/badger/base.html
@@ -2,6 +2,7 @@
 
 {% block nav2 %} 
     <section id="actions">
+        <a href="/badger">Home</a>
         <a href="/badger/awards/feed">Awards Feed</a>
         <a href="/badger/create">Create a Badge</a>
         <a href="/badger/you">Your Badges</a>
