--- a/badger/templates/badger/includes/awards_as_badges_list.html
+++ b/badger/templates/badger/includes/awards_as_badges_list.html
@@ -2,9 +2,10 @@
 <ul class="badges clearfix">
     {% for award in award_list %}
     
-        <li class="badge">
+        <li class="badge all-badges">
             <a href="{{ award.get_absolute_url }}" class="image"><img src="{% award_image award %}"
-                alt="{{ award.badge.title }}" width="128" height="128" /></a>            
+                alt="{{ award.badge.title }}" width="128" height="128" /></a>   
+	<br>
             <a href="{{ award.get_absolute_url }}" class="label">
                 <span class="title">{{ award.badge.title }}</span></a>
         </li>
