--- a/badger/templates/badger/includes/awards_list.html
+++ b/badger/templates/badger/includes/awards_list.html
@@ -8,15 +8,13 @@
             <a href="{{ award.get_absolute_url }}" class="award_image"><img src="{% award_image award %}"
                 alt="{{ award.badge.title }}" width="128" height="128" /></a>
         
-            <a href="{{ award.get_absolute_url }}" class="label">
+            <a href="{{ award.get_absolute_url }}" class="label awards-list">
                 <span class="badge_title">{{ award.badge.title }}</span>
                 <span class="relation">awarded to</span>
+<a href="{{ award.get_absolute_url }}" class="avatar_image"><img src="{% user_avatar award.user %}"
+                alt="{{ award.badge.title }}" width="24" height="24" /></a>
                 <span class="user">{{ award.user }}</span>
             </a>
-            
-            <a href="{{ award.get_absolute_url }}" class="avatar_image"><img src="{% user_avatar award.user %}"
-                alt="{{ award.badge.title }}" width="128" height="128" /></a>            
-
         </li>
 
     {% endfor %}
