--- a/badger/templates/badger/includes/badge_full.html
+++ b/badger/templates/badger/includes/badge_full.html
@@ -1,9 +1,9 @@
 {% load badger_tags %}
 
 
-<dl id="container" class="badge" data-slug="{{ badge.slug }}">
+<dl id="container" class="badge-detail" data-slug="{{ badge.slug }}">
 <div id="title" class="title">{{ badge.title }}</div>
-<dl class="badge" data-slug="{{ badge.slug }}">
+<dl class="badge-detail" data-slug="{{ badge.slug }}">
     {% if award and award.image %}
         <dt>Image:</dt>
             <dd class="image"><a href="{{ badge.get_absolute_url }}" class="image"><img src="{{ award.image.url }}" width="256" height="256" /></a></dd>
