made things a bit prettier

--- a/badger/static/css/badger-awards-list.less
+++ b/badger/static/css/badger-awards-list.less
@@ -38,7 +38,7 @@ a.label:hover {
 	text-decoration: underline;
 	color: black;
 }
-
+/*
 .badge {
 	text-align: center;
 	margin-right: 20px;
@@ -50,3 +50,4 @@ a.label:hover {
 		padding-right: 15px;
 	}
 }
+*/
