--- a/badger/static/css/badger-feed-badge.less
+++ b/badger/static/css/badger-feed-badge.less
@@ -1,7 +1,16 @@
 li.badge {
+	text-align: center;
 	padding: 9px;
 	background-color: #e2e0e6;
 	border: #524289 solid 3px;
+	margin: 8px;
+	.label {
+                padding-top: 10px;
+        }
+        .image {
+                padding-left: 15px;
+                padding-right: 15px;
+        }
 	a {
 		background-color: #e2e0e6;
 		font-weight: normal;
