--- a/badger/templates/badger/badge_detail.html
+++ b/badger/templates/badger/badge_detail.html
@@ -14,8 +14,10 @@
 
 {% block content %}
 
-<section id="badge_detail">
-    <h2>Badge detail</h2>
+<section>
+    <header class="page-header">
+        <h2>Badge:</h2>
+    </header>
     {% include "badger/includes/badge_full.html" %}
 </section>
 
