--- a/badger/templates/badger/base.html
+++ b/badger/templates/badger/base.html
@@ -6,11 +6,10 @@
        <li><a href="/badger/awards/feed">Awards Feed</a></li>
        <li><a href="/badger/create">Create a Badge</a></li>
        <li><a href="/badger/you">Your Badges</a></li>
+       <li>For real?</li>
     </ul>
 {% endblock %}
 
 {% block extra_styles %}
     <link href="/css/badger.css" rel="stylesheet" type="text/css" />
-
 {% endblock extra_styles %}
-
