Added autocomplete to nominee form for netids.

--- a/badger/templates/badger/badge_nominate_for.html
+++ b/badger/templates/badger/badge_nominate_for.html
@@ -2,6 +2,11 @@
 
 {% block pageid %}badge_nominate{% endblock %}
 
+{% block pageJS %}
+    <script src="/static/js/jquery-ui-1.10.4.custom.min.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.autocomplete.js"></script>
+{% endblock %}
+
 {% block content %}
 
 <section class="row-fluid">
@@ -20,10 +25,12 @@
 
         <form id="nominate_badge" method="POST" action="" enctype="multipart/form-data">
             {% csrf_token %}
+            <div class="ui-widget" name="combobox">
             <ul>
                 {{ form.as_ul }}
                 <li><input type="submit" class="btn btn-large btn-primary submit" value="{{ _("Submit nominations") }}"></li>
             </ul>
+            </div>
         </form>
     </section>
 
