--- a/badger/templates/badger/badge_edit.html
+++ b/badger/templates/badger/badge_edit.html
@@ -1,19 +1,91 @@
 {% extends "badger/base.html" %}
 
 {% block pageid %}badge_edit{% endblock %}
+{% load static %}
+    {% block pageCSS %}
+
+    {% if not perms.taggit.add_tag %}
+    <link rel="stylesheet" href="{% static "css/chosen.min.css" %}" type="text/css" />
+    {% endif %}
+    {% endblock %}
+
+    {% block pageJS  %}
+    
+    {% if not perms.taggit.add_tag %}
+        <script src="{% static "js/chosen.jquery.min.js" %}" type="text/javascript"></script>
+        <script src="{% static "js/badger.js" %}" type="text/javascript"></script>
+    {% endif %}
+    {% endblock %}
 
 {% block content %}
 
 <section>
+
     <header class="page-header">
     <h2>Edit badge: {{ badge.title }}</h2>
     </header>
-
     <form id="edit_badge" class="form-horizontal" 
             method="POST" action="" enctype="multipart/form-data">
         {% csrf_token %}
-        <ul>
-            {{ form.as_ul }}
+            <ul>
+                <li class="required">
+                  <label for="id_title">Title: </label>
+                  {{ form.title }}
+                  <p class="help">{{ form.title.help_text }}</p>
+                </li>
+                <li>
+                  <label for="id_image">Image: </label>
+                  {{ form.image }}
+                  <p class="help">{{ form.image.help_text }}</p>
+                </li>
+                <li>
+                  <label for="id_description">Description: </label>
+                  {{ form.description }}
+                  <p class="help">{{ form.description.help_text }}</p>
+                </li>
+                <li>
+                  <label for="id_tags">Tags: </label>
+                 {#Checking if the user has permissions to add a tag. If they do, then the normal tag text field is used. If they do not, they get a chosen tag field with current tag options to choose from.#}
+                {% if perms.taggit.add_tag %}
+                {#grabs all currently set tags for badge for user to see in text field upon loading. #} 
+                 <input id="id_tags" type="text" name="tags" value="{% for tag in badge.tags.all %}{{ tag }}{% if not forloop.last %},{% endif %} {% endfor %}" maxlength="255" />
+                    <p class="help">{{ form.tags.help_text }}</p>
+                 {% else %}
+                    {% load taggit_extras %}
+                    {% get_taglist as tags for 'badger.Badge' %}
+                    <select class="tagopt edit" multiple="multiple" data-placeholder="Click to select tag/s.">
+                    {% for tag in tags %}
+                       {# presets current tags in select box #}
+                       <option {% if tag in badge.tags.all %} selected="selected" {% endif %}>
+                            {{ tag }}
+                        </option>
+                    {% endfor %}
+                    </select>
+     {#hack for now, until alternative method is found (if exists?) chosen sends multiple tag parameters that replace each other in the data model instead of as a list in POST request. to fix this, javascript updates hidden input value with tag parameters in list format and sends that instead. #} 
+                    <input type="hidden" id="id_tags" name="tags" />
+                 {% endif %}
+                 <p class="help"></p>
+                </li>
+                <li>
+                  <label for="id_unique">Unique: </label>
+                  {{ form.unique }}
+                  <p class="help">{{ form.unique.help_text }}</p>
+                </li>
+                <li>
+                  <label for="id_prerequisites">Prerequisites: </label>
+                  {{ form.prerequisites }}
+                  <p class="help">{{ form.prerequisites.help_text }}</p>
+                </li>
+                <li>
+                  <label for="id_nominations_accepted">Nominations accepted: </label>
+                  {{ form.nominations_accepted }}
+                  <p class="help">{{ form.nominations_accepted.help_text }}</p>
+                </li>
+                <li>
+                  <label for="id_nominations_autoapproved">Nominations autoapproved: </label>
+                  {{ form.nominations_autoapproved }}
+                  <p class="help">{{ form.nominations_autoapproved.help_text }}</p>
+                </li>
             <li><input type="submit" class="btn btn-large btn-primary submit" value="{{ _("Save badge") }}"></li>
         </ul>
     </form>
