--- a/badger/templates/badger/base.html
+++ b/badger/templates/badger/base.html
@@ -6,11 +6,14 @@
        <li><a href="/badger/awards/feed">Awards Feed</a></li>
        <li><a href="/badger/create">Create a Badge</a></li>
        <li><a href="/badger/you">Your Badges</a></li>
+       <li><a href="/badger/tag">Badge Tags</a></li>
     </ul>
 {% endblock %}
 
 {% block extra_styles %}
-    <link href="/css/badger.css" rel="stylesheet" type="text/css" />
 
 {% endblock extra_styles %}
 
+{% block extra_js %}
+
+{% endblock extra_js %}
