--- a/badger/templates/badger/badge_create.html
+++ b/badger/templates/badger/badge_create.html
@@ -24,7 +24,7 @@
         {% csrf_token %}
         <ul>
                 <li class="required">
-                  <label for="id_title">Title: </label>
+                  <label for="id_title">Title: </label><br />
                   {{ form.title }}
                   <p class="help">{{ form.title.help_text }}</p>
                 </li>
@@ -34,12 +34,12 @@
                   <p class="help">{{ form.image.help_text }}</p>
                 </li>
                 <li>
-                  <label for="id_description">Description: </label>
+                  <label for="id_description">Description: </label><br />
                   {{ form.description }}
                   <p class="help">{{ form.description.help_text }}</p>
                 </li>
                 <li>
-                  <label for="id_tags">Tags: </label>
+                  <label for="id_tags">Tags: </label><br />
  {# Checking if the user has permissions to add a tag. If they do, then the normal tag text field is used. If they do not, they get a chosen tag field with current tag options to choose from. #}
                  {% if perms.taggit.add_tag %}
                     {{ form.tags }}
@@ -60,22 +60,22 @@
                  <p class="help"></p>
                 </li>
                 <li>
-                  <label for="id_unique">Unique: </label>
+                  <label for="id_unique">Unique: </label><br />
                   {{ form.unique }}
                   <p class="help">{{ form.unique.help_text }}</p>
                 </li>
                 <li>
-                  <label for="id_prerequisites">Prerequisites: </label>
+                  <label for="id_prerequisites">Prerequisites: </label><br />
                   {{ form.prerequisites }}
                   <p class="help">{{ form.prerequisites.help_text }}</p>
                 </li>
                 <li>
-                  <label for="id_nominations_accepted">Nominations accepted: </label>
+                  <label for="id_nominations_accepted">Nominations accepted: </label><br />
                   {{ form.nominations_accepted }}
                   <p class="help">{{ form.nominations_accepted.help_text }}</p>
                 </li>
                 <li>
-                  <label for="id_nominations_autoapproved">Nominations autoapproved: </label>
+                  <label for="id_nominations_autoapproved">Nominations autoapproved: </label><br />
                   {{ form.nominations_autoapproved }}
                   <p class="help">{{ form.nominations_autoapproved.help_text }}</p>
                 </li>
